@@ -60,11 +60,11 @@ public class BootReceiver extends BroadcastReceiver {
             String setTime = sharedPreferences.getString("userTime", "6:00 p.m.").trim();
             int hour, min;
             if (setTime.indexOf("p") == -1) {
-                hour = new Integer(setTime.substring(0, setTime.indexOf(":")));
-                min = new Integer(setTime.substring(setTime.indexOf(":") + 1, setTime.indexOf("a")).trim());
+                hour = Integer.valueOf(setTime.substring(0, setTime.indexOf(":")));
+                min = Integer.valueOf(setTime.substring(setTime.indexOf(":") + 1, setTime.indexOf("a")).trim());
             } else {
-                hour = new Integer(setTime.substring(0, setTime.indexOf(":"))) + 12;
-                min = new Integer(setTime.substring(setTime.indexOf(":") + 1, setTime.indexOf("p")).trim());
+                hour = Integer.valueOf(setTime.substring(0, setTime.indexOf(":"))) + 12;
+                min = Integer.valueOf(setTime.substring(setTime.indexOf(":") + 1, setTime.indexOf("p")).trim());
             }
             List<ConsumeVO> consumerVOS = consumeDB.getFixdate();
             JsonObject jsonObject;
@@ -99,7 +99,7 @@ public class BootReceiver extends BroadcastReceiver {
                         }
                         Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                         Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                        ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getId());
+                        ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getFkKey());
                         if (cccc == null) {
                             consumeVO.setNotify("false");
                             consumeVO.setFixDate("false");
@@ -118,7 +118,7 @@ public class BootReceiver extends BroadcastReceiver {
                         if (date.get(Calendar.DAY_OF_WEEK) == change.get(fixdetail)) {
                             Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                             Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                            ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getId());
+                            ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getFkKey());
                             if (cccc == null) {
                                 consumeVO.setNotify("false");
                                 consumeVO.setFixDate("false");
@@ -139,7 +139,7 @@ public class BootReceiver extends BroadcastReceiver {
 
                             Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                             Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                            ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getId());
+                            ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getFkKey());
                             if (cccc == null) {
                                 consumeVO.setNotify("false");
                                 consumeVO.setFixDate("false");
@@ -155,7 +155,7 @@ public class BootReceiver extends BroadcastReceiver {
                         if (Maxday < Integer.valueOf(fixdate) && day == Maxday) {
                             Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                             Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                            ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getId());
+                            ConsumeVO cccc = consumeDB.getAutoTimePeriod(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), consumeVO.getFkKey());
                             if (cccc == null) {
                                 consumeVO.setNotify("false");
                                 consumeVO.setFixDate("false");
@@ -179,7 +179,7 @@ public class BootReceiver extends BroadcastReceiver {
                 if ("每天".equals(action)) {
                     Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                     Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                    BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getId());
+                    BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getFkKey());
                     if(bb==null)
                     {
                         b.setFixDate("false");
@@ -195,7 +195,7 @@ public class BootReceiver extends BroadcastReceiver {
                     if (date.get(Calendar.DAY_OF_WEEK) == change.get(fixdetail)) {
                         Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                         Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getId());
+                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getFkKey());
                         if(bb==null)
                         {
                             b.setFixDate("false");
@@ -215,7 +215,7 @@ public class BootReceiver extends BroadcastReceiver {
 
                         Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                         Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getId());
+                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getFkKey());
                         if(bb==null)
                         {
                             b.setFixDate("false");
@@ -231,7 +231,7 @@ public class BootReceiver extends BroadcastReceiver {
 
                         Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                         Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getId());
+                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getFkKey());
                         if(bb==null)
                         {
                             b.setFixDate("false");
@@ -250,7 +250,7 @@ public class BootReceiver extends BroadcastReceiver {
 
                         Calendar start = new GregorianCalendar(year, month, day, 0, 0, 0);
                         Calendar end = new GregorianCalendar(year, month, day, 23, 59, 0);
-                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getId());
+                        BankVO bb = bankDB.getAutoBank(new Timestamp(start.getTimeInMillis()), new Timestamp(end.getTimeInMillis()), b.getFkKey());
                         if(bb==null)
                         {
                             b.setFixDate("false");
